# VirtXX

./: CMakeLists.txt  CMakeLists.txt.bak  LICENSE  README.md
XMLConfigFiles/: basic_storage_pool.xml  basic_storage_volume.xml
include/: Deleters.hxx  ErrorBlock.hxx  Global.hxx  LibvirtConnection.hxx  LibvirtConnectionCreationKey.hxx  LibvirtDomain.hxx  LibvirtStoragePool.hxx  LibvirtStoragePoolCreationKey.hxx  LibvirtStorageVolume.hxx  Misc.hxx  XMLConfig.hxx  datatypes.hxx  virtxx.hxx  vmm.hxx
include/VirtXX/Impl/: Deleters.hxx  ErrMsg.hxx  ErrorBlock.hxx  Global.hxx  LibvirtConnection.hxx  LibvirtConnectionCreationKey.hxx  LibvirtDomain.hxx  LibvirtDomainConsole.hxx  LibvirtDomainCreationKey.hxx  LibvirtStoragePool.hxx  LibvirtStoragePoolCreationKey.hxx  LibvirtStorageVolume.hxx  Misc.hxx  XMLConfig.hxx  datatypes.hxx
include/VirtXX/Impl/Config/: ConfigValue.hxx  Datatype.hxx  Document.hpp  DomainConfig.hxx  StoragePoolConfig.hxx  StorageVolumeConfig.hxx  Value.hxx
include/VirtXX/Impl/Config/Base/: BaseConfig.hxx
src/: Deleters.cxx  ErrorBlock.cxx  Global.cxx  LibvirtConnection.cxx  LibvirtDomain.cxx  LibvirtStoragePool.cxx  LibvirtStorageVolume.cxx  XMLConfig.cxx
src/VirtXX/Impl/: Deleters.cxx  ErrorBlock.cxx  Global.cxx  LibvirtConnection.cxx  LibvirtDomain.cxx  LibvirtDomainConsole.cxx  LibvirtStoragePool.cxx  LibvirtStorageVolume.cxx  Misc.cxx  XMLConfig.cxx
src/VirtXX/Impl/Config/: Datatype.cxx  Document.cxx  DomainConfig.cxx  StoragePoolConfig.cxx  StorageVolumeConfig.cxx  Value.cxx
src/VirtXX/Impl/Config/Base/: BaseConfig.cxx
