CMAKE_MINIMUM_REQUIRED(VERSION 3.31)

project(virtxx LANGUAGES C CXX)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(PkgConfig REQUIRED)
pkg_check_modules(LIBVIRT REQUIRED IMPORTED_TARGET libvirt)

set(VIRTXX_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LibvirtConnection.cxx
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LibvirtDomain.cxx
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Deleters.cxx
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ErrorBlock.cxx
)
set(COMMON_LIBS
  PkgConfig::LIBVIRT
)
set(VIRTXX_BIN_NAME bin.out)
set(COMMON_COMPILE_OPTIONS -Wall -Wextra)

add_library(${PROJECT_NAME} SHARED ${VIRTXX_SOURCES})
target_include_directories(${PROJECT_NAME} PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>
)

target_link_libraries(${PROJECT_NAME} PUBLIC ${COMMON_LIBS})
target_compile_options(${PROJECT_NAME} PRIVATE ${COMMON_COMPILE_OPTIONS})

add_executable(${VIRTXX_BIN_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cxx)
target_link_libraries(${VIRTXX_BIN_NAME} PRIVATE ${PROJECT_NAME})
